--- a/ArcticOverlay.csproj
+++ b/ArcticOverlay.csproj
@@ -48,10 +48,10 @@
     <!--This is the list of assemblies that the mod references. Most of these are unnecessary for normal mods, but are included here for completeness.-->
     <ItemGroup>
         <Reference Include="Il2CppInterop.Common">
-          <HintPath>W:\Steam\steamapps\common\TheLongDark\MelonLoader\net6\Il2CppInterop.Common.dll</HintPath>
+          <HintPath>$(TheLongDarkPath)/MelonLoader/net6/Il2CppInterop.Common.dll</HintPath>
         </Reference>
         <Reference Include="Il2CppInterop.Runtime">
-          <HintPath>W:\Steam\steamapps\common\TheLongDark\MelonLoader\net6\Il2CppInterop.Runtime.dll</HintPath>
+          <HintPath>$(TheLongDarkPath)/MelonLoader/net6/Il2CppInterop.Runtime.dll</HintPath>
         </Reference>
         <Reference Include="MelonLoader" />
         <Reference Include="0Harmony" />
